--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create your own site for free</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobiri.se/h">create a web page</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -197,7 +197,7 @@
 <br>The software has been developed with input from health care providers here and abroad, it is user friendly and reliable. Mr. Rana Asim(CEO of EthosMED) is proficient in his field, was forthcoming and patient for all our training needs. &nbsp;<br></p>
                         </div>
                         <div class="user_name mbr-bold pb-2 mbr-fonts-style display-7">Sheikh Muneeb Ahmed Nasr</div>
-                        <div class="user_desk mbr-light mbr-fonts-style display-7">Cheif Operating Officer
+                        <div class="user_desk mbr-light mbr-fonts-style display-7">Chief Operating Officer
 <div>Al Nasar Lab &amp; Diagnostic Centre</div><div>31-E, Maulana Shaukat Ali Road, Lahore
 </div><div>www.alnasarlab.com</div></div>
                     </div>
@@ -326,7 +326,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1p41Kw+tZEwfMqJzCxtb4WAVLjs29uonUyqDBXLFBr0E5YqcepZqaNDFUCad7GNOyKIzE+FMRpZ5Razr0OTzsjmLePTFoCFicybGWaH+5DFf2Ei+dx6Vw4YOJRsHyUOt" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZQlsRq1ncwD07XFgWVD0Hcit7nl8oMrb1CO8Ejb2TO2GxBdTuExHDPjgbIUVEp6EPnMsfbzyexjeXC/OrNHuwFa6a06VAqfyZOd5YJyw44IlFwcA0qNkJFY1uk7qyJhF" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
