--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">create a web page</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobiri.se/c">free web builder</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -192,7 +192,7 @@
                             <img src="assets/images/muneeb-400x354.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
-                            <p class="mbr-fonts-style display-7">I believe that these solutions we've acquired from EthosMed, for Picture Archiving and Communication System and Tele-radiology, will go a long way in achieving our objective of becoming Pakistans first One Stop Shop for health and medical services. 
+                            <p class="mbr-fonts-style display-7">I believe that the solutions we've acquired from EthosMed, for Picture Archiving and Communication and Tele-radiology, will go a long way in achieving our objective of becoming Pakistans first One Stop Shop for health and medical services. 
 <br>
 <br>The software has been developed with input from health care providers here and abroad, it is user friendly and reliable. Mr. Rana Asim(CEO of EthosMED) is proficient in his field, was forthcoming and patient for all our training needs. &nbsp;<br></p>
                         </div>
@@ -326,7 +326,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZQlsRq1ncwD07XFgWVD0Hcit7nl8oMrb1CO8Ejb2TO2GxBdTuExHDPjgbIUVEp6EPnMsfbzyexjeXC/OrNHuwFa6a06VAqfyZOd5YJyw44IlFwcA0qNkJFY1uk7qyJhF" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e3D8SAxN1l0H3gKBvPpNASMnbuuh5gxGcWmmfrzvY8nzeUonFhA1RZe5qQZnK14ONQi3zbO1sThNguMgSJ7YWP3UG7wfE8S10y/+kIMAVD+Q9JdlYiTFS67lKVTdCl46" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
