--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/ethosmed-logo-1381x282.png" type="image/x-icon">
   <meta name="description" content="PACS & Teleradiology solutions in Pakistan. EthosMED’ revolutionary workflow infrastructure has been designed and developed using the expertise of radiologists, technicians, and PACS administrators.">
-  <title>Ethosmed - PACS & Teleradiology in Pakistan</title>
+  <title>Ethosmed - PACS & Teleradiology Solutions in Pakistan</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/i">web creation software</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -326,7 +326,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HI+imUjhjluQYFbyNpd0M/lMRP7DRkaNy1c8X3CQPwjgbSA9rSYSMWM5i/RViP0LSnNu6/Za8YxPJFKK+mduizrmC7NkPP43LHocpoaEx9arDfVEEUNIisfOu3fMZjuh" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RSSPwh/hzQBKWyX/q2muFsTKz+HxfKP8R6CWWX1iHgqgTwrgs7PmT4BcTQDqP71oUoClwKoXr2seT5IHP+rwr4V+IfYJ7fH0GGB/oyN42LLUTFmLBnmKbUvjOKZvdB6E" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
