--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap html templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobiri.se/y">html web templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -250,7 +250,7 @@
                 </div>
             </div>
 
-            <div class="mbr-figure" style="width: 52%;">
+            <div class="mbr-figure" style="width: 60%;">
                 <img src="assets/images/screenshot-2018-09-04-ethosmed-pacs-1026x700.png" alt="Main page" title="">
             </div>
 
@@ -316,7 +316,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ErvE+aFesJuTLQv4fW0v1GOcbvj7UttQJhHHTfZyRprSQmyY+5Umqu+PoqV/e1pUjcVbMvjMYOCalSfM32ZTOFhgfp5iaMoF/sGQisFp8rr+KuEHTKvUNvtMT1U6NCam" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6HsKVFTzUdIeqJCKlSsC9zlNjM3VhqFzj/xdXYnVlqonCQ1Ark7IY0phGBfrUiYvQOZ+D3tT8azurd+ZWZSw3xJSEzMemEL9uSCKqkZCiKB0klrcjw0GPov/Wf/DyazQ" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
