--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">html web templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -316,7 +316,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6HsKVFTzUdIeqJCKlSsC9zlNjM3VhqFzj/xdXYnVlqonCQ1Ark7IY0phGBfrUiYvQOZ+D3tT8azurd+ZWZSw3xJSEzMemEL9uSCKqkZCiKB0klrcjw0GPov/Wf/DyazQ" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nstjiWf6FFPO0XTXXCGPrHD9cwh3in2z5XdDHwjGFDLE+hvfnxBfBxvshUwVtHkXGRP9TmN/aYTNsijwFxGBRsa02Pxvk+suCDhy/QMWYlJv5sfOhoWhsLPHbPzVV7Ag" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -374,7 +374,7 @@
                     <a href="https://www.linkedin.com/company/ethosmed/" target="_blank">
                         <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"></span>
                     </a>
-                    <a href="https://www.linkedin.com/company/ethosmed/" target="_blank">
+                    <a href="https://www.facebook.com/ethosmed/" target="_blank">
                         <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
                     </a>
                     <a href="https://instagram.com/mobirise" target="_blank">
