--- a/page1.html
+++ b/page1.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -166,7 +166,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0xTeWj2BeQXRDYK+Nu0K3xrMJjmRImEK1Xn9e1mXj49B8UZWrH2Y9p6HcpteUbUNrqBQxwMEa51UaSkQ3IuhJSeA2smeZG6TH3XKsPekrkNReynMzCXLIzia2cCXbRf9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ddKtSgUpVbtGNWtIRx44NDfkTykRsROVTHWqDJ6r0oScGoS7bp6838ptXaMphBfEVtMBoQlzt7JUn9n4ehaOhe6Xj4f50Gy2Fx6flMVOurmS6z5qqqbwJtmPK6Ffyebp">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
