--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -164,9 +164,9 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
-                    <div data-form-alert="" hidden="">Thanks getting in touch...we will get back to you soon!</div>
+                    <div data-form-alert="" hidden="">Thanks for getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="koZB21Cjl+J0R6nXzqRFJ0hrCMyG0VT4egEd3FB2wLCeTufUD9U7dQz3DgFuAjThNxqT22wt+6/Z/7dWFO/zVxOBJJlmFV+xaYyrPvOmTZkzsWHlFFgXigJ1ycXve9yv">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QCWuaTT/W3OHCWfDlkFhx7t0kmhwd2tWrE/HrQnZ9E8mukBuF/60sa3L6MhMSv/wZM5fRlZFoXcbLk6ORrxGHe5lUlPoZMESpyuMuCtO0/KZQTbhz0pGIUxBtQefIdDi">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
