create github pages

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
                     <a class="nav-link link text-primary display-4" href="#top"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features10-4"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content4-h"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>News</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features12-a"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-primary display-4" href="page1.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a>
+                    <a class="nav-link link text-primary display-4" href="contact.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
