create github pages

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -164,7 +164,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Al-Nasar Lab &amp; Diagnostic Centre</h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><strong>&nbsp;</strong>Al-Nasar Lab &amp; Diagnostic Centre, one of the premier diagnostics setups in Pakistan has selected EthosMED's PACS &amp; Teleradiology solution to streamline its ever-increasing portfolio of Radiology diagnostics services including MRI, CT, Flouroscopy, DEXA Scan, Mammography, Dental CT, 3D Dental X-Ray, Digital X-Ray, Ultrasound, and Nuclear Medecine. 
+                        <p class="mbr-text mbr-fonts-style display-7"><strong>&nbsp;</strong>Al-Nasar Lab &amp; Diagnostic Centre, one of the premier diagnostics setups in Pakistan has selected EthosMED's PACS &amp; Teleradiology solution to streamline its growing portfolio of Radiology diagnostics services including MRI, CT, Flouroscopy, DEXA Scan, Mammography, Dental CT, 3D Dental X-Ray, Digital X-Ray, Ultrasound, and Nuclear Medecine. 
 <br>
 <br><strong><a href="http://www.alnasarlab.com">www.alnasarlab.com</a></strong></p>
                     </div>
@@ -193,7 +193,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><br>Peregrine Radiology<br></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Created by Epica Medical Innovations, a subsidiary of Epica International which is a a market leading veterinary technology and imaging innovation company, Peregrine Radiology was set up to dictate the standards of radiologist-veterinarian relations. Peregrine has selected EthosMed's PACS &amp; Teleradiology package for their remote reading, reporting and report delivery needs.<br><br><a href="http://www.peregrinerad.com">www.peregrinerad.com</a><br>
+                            Created by Epica Medical Innovations, a subsidiary of Epica International which is a a market leading veterinary technology and imaging innovation company, Peregrine Radiology was set up to dictate the standards of radiologist-veterinarian relations. Peregrine has selected EthosMed's PACS &amp; Teleradiology solution for their remote reading, reporting and report delivery needs.<br><br><a href="http://www.peregrinerad.com">www.peregrinerad.com</a><br>
                         </p>
                     </div>
                 </div>
