--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header4 cid-rn6iC4ULb3 mbr-fullscreen mbr-parallax-background" id="header4-t">
+<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="header4 cid-rn6iC4ULb3 mbr-fullscreen mbr-parallax-background" id="header4-t">
 
     
 
@@ -413,6 +413,22 @@
                 <div class="panel-item">
                     <div class="card-block">
                         <div class="testimonial-photo">
+                            <img src="assets/images/perrad-4-800x600.png" alt="">
+                        </div>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7">"As a rapidly growing telemedicine startup, Peregrine Radiology needed to quickly transition from a common service portal, to a customizable, cloud-based applications platform. The partnership we developed with Rana and his team has proven second to none. Their clear communication, reliability and strategic approach led to a timely development process. EthosMed+ has provided us with comprehensive, scalable, cost-effective solutions that work."</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Doug Nieman</div>
+                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Director of Field Installation and Service 
+<br>Peregrine Radiology 
+<br>813-317-5414 
+<br>www.peregrinerad.com</small>
+                    </div>
+                </div>
+            </div><div class="mbr-testimonial align-center col-12 col-md-10">
+                <div class="panel-item">
+                    <div class="card-block">
+                        <div class="testimonial-photo">
                             <img src="assets/images/muneeb-400x354.png" alt="">
                         </div>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7">"I believe that the solutions we've acquired from EthosMed for Picture Archiving and Communication and Tele-radiology, will go a long way in achieving our objective of becoming Pakistans first One Stop Shop for health and medical services. 
@@ -421,28 +437,10 @@
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Sheikh Muneeb Ahmed Nasr</div>
-                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Chief Operating Officer
-<br>Al Nasar Lab &amp; Diagnostic Centre
-<br>31-E, Maulana Shaukat Ali Road, Lahore
+                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Chief Operating Officer 
+<br>Al Nasar Lab &amp; Diagnostic Centre 
+<br>31-E, Maulana Shaukat Ali Road, Lahore 
 <br>www.alnasarlab.com</small>
-                    </div>
-                </div>
-            </div><div class="mbr-testimonial align-center col-12 col-md-10">
-                <div class="panel-item">
-                    <div class="card-block">
-                        <div class="testimonial-photo">
-                            <img src="assets/images/perrad-4-800x600.png" alt="">
-                        </div>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                           "As a rapidly growing telemedicine startup, Peregrine Radiology needed to quickly transition from a common service portal, to a customizable, cloud-based applications platform. The partnership we developed with Rana and his team has proven second to none. Their clear communication, reliability and strategic approach led to a timely development process. EthosMed+ has provided us with comprehensive, scalable, cost-effective solutions that work."
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Doug Nieman</div>
-                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Director of Field Installation and Service
-<br>Peregrine Radiology
-<br>813-317-5414
-<br>www.peregrinerad.com</small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
