--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">EthosMED PACS &amp; Teleradiology</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Imaging centers today are finding that image exchange via VPN, FTP, and CD is draining their efficiency and decreasing their ability to compete with companies that have already transformed their model for image exchange. EthosMed's PACS &amp; Teleradiology solutions allow our users in both the Human and Veterinary segments users to consolidate and share images in real time and exchange them with providers seamlessly. The results: faster turnaround of studies, a reduction of manual effort for you and providers, and a better overall experience for patients.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Imaging centers today are finding that image exchange via VPN, FTP, and CD is draining their efficiency and decreasing their ability to compete with companies that have already transformed their model for image exchange. EthosMed's PACS &amp; Teleradiology solutions allow our users in both the Human and Veterinary segments to consolidate and share images in real time and exchange them with providers seamlessly. The results: faster turnaround of studies, a reduction of manual effort for you and providers, and a better overall experience for patients.</h3>
                 
             </div>
         </div>
